package com.mygdx.game;

public interface IManager {
    void initialize();
    void update(float deltaTime);
    void shutdown();
}
