---
config:
  layout: elk
---
classDiagram
direction TB

class GameMaster {
  -running: boolean
  -deltaTime: float
  -sceneManager: SceneManager
  -entityManager: EntityManager
  +init(): void
  +run(): void
  +dispose(): void
}

class IManager {
  +initialize(): void
  +update(deltaTime: float): void
  +shutdown(): void
}

class SceneManager {
  -current: Scene
  -scenes: Map~String, Scene~
  +addScene(name: String, scene: Scene): void
  +loadScene(name: String): void
  +unloadScene(name: String): void
  +transitionTo(name: String): void
  +getCurrent(): Scene
  +initialize(): void
  +update(deltaTime: float): void
  +shutdown(): void
}

class EntityManager {
  -entities: List~Entity~
  -entitiesToAdd: List~Entity~
  -entitiesToRemove: List~Entity~
  +initialize(): void
  +update(deltaTime: float): void
  +shutdown(): void
  +addEntity(entity: Entity): void
  +removeEntity(entity: Entity): void
  +getEntityCount(): int
  +getDynamicEntities(): List~Entity~
  +getCollidableEntities(): List~Entity~
  +getStaticEntities(): List~Entity~
}

class Scene {
  -name: String
  #entityManager: EntityManager
  -collisionManager: CollisionManager
  -movementManager: MovementManager
  -ioManager: IOManager
  +onEnter(): void
  +onExit(): void
  +update(deltaTime: float): void
  +render(): void
  +dispose(): void
}

class CollisionManager {
  -collidables: List~CollisionComponent~
  +initialize(): void
  +update(deltaTime: float): void
  +shutdown(): void
  +detectCollisions(): void
  +checkCollision(a: CollisionComponent, b: CollisionComponent): boolean
  #handleCollision(a: CollisionComponent, b: CollisionComponent): void
}

class MovementManager {
  -strategies: List~MovementStrategy~
  +initialize(): void
  +update(deltaTime: float): void
  +shutdown(): void
  +addMovementStrategy(strategy: MovementStrategy): void
  +removeMovementStrategy(strategy: MovementStrategy): void
  +updateMovement(targets: List~IMoveable~, deltaTime: float): void
}

class IOManager {
  -input: InputManager
  -output: OutputManager
  +initialize(): void
  +update(deltaTime: float): void
  +shutdown(): void
  +getInput(): InputManager
  +getOutput(): OutputManager
}

class Entity {
  #x: float
  #y: float
  #width: float
  #height: float
  #active: boolean
  #entityId: String
  #staticComponent: StaticComponent
  #dynamicComponent: DynamicComponent
  #collisionComponent: CollisionComponent
  +update(delta: float): void
  +render(batch: SpriteBatch): void*
  +addComponent(StaticComponent): void
  +addComponent(DynamicComponent): void
  +addComponent(CollisionComponent): void
  +hasStaticComponent(): boolean
  +hasDynamicComponent(): boolean
  +hasCollisionComponent(): boolean
  +getX(): float
  +getY(): float
  +setPosition(x: float, y: float): void
  +isActive(): boolean
  +dispose(): void
}

class StaticComponent {
  -owner: Entity
  -visible: boolean
  -collidable: boolean
  -staticType: String
  -enabled: boolean
  +setOwner(entity: Entity): void
  +getOwner(): Entity
  +onDetach(): void
  +isCollidable(): boolean
  +isVisible(): boolean
  +isEnabled(): boolean
  +setEnabled(enabled: boolean): void
}

class DynamicComponent {
  -owner: Entity
  -velocityX: float
  -velocityY: float
  -accelerationX: float
  -accelerationY: float
  -maxSpeed: float
  -friction: float
  -affectedByGravity: boolean
  -gravity: float
  -enabled: boolean
  +setOwner(entity: Entity): void
  +getOwner(): Entity
  +update(entity: Entity, delta: float): void
  +applyForce(fx: float, fy: float): void
  +applyImpulse(ix: float, iy: float): void
  +setVelocity(vx: float, vy: float): void
  +getSpeed(): float
  +isEnabled(): boolean
  +setEnabled(enabled: boolean): void
}

class CollisionComponent {
  -owner: Entity
  -boundX: float
  -boundY: float
  -boundWidth: float
  -boundHeight: float
  -collidable: boolean
  -isTrigger: boolean
  -collisionLayer: String
  -wasColliding: boolean
  -isColliding: boolean
  -enabled: boolean
  +setOwner(entity: Entity): void
  +getOwner(): Entity
  +updateBounds(x: float, y: float, w: float, h: float): void
  +overlaps(other: CollisionComponent): boolean
  +contains(x: float, y: float): boolean
  +getCenterX(): float
  +getCenterY(): float
  +distanceTo(other: CollisionComponent): float
  +updateCollisionState(colliding: boolean): void
  +justStartedColliding(): boolean
  +justStoppedColliding(): boolean
  +onCollisionEnter(other: CollisionComponent): void
  +onCollisionStay(other: CollisionComponent): void
  +onCollisionExit(other: CollisionComponent): void
  +canCollideWith(other: CollisionComponent): boolean
  +isEnabled(): boolean
  +setEnabled(enabled: boolean): void
}

class GenericEntity {
  -color: Color
  -alpha: float
  +GenericEntity(x: float, y: float, w: float, h: float, color: Color)
  +render(batch: SpriteBatch): void
  +setColor(color: Color): void
  +setAlpha(alpha: float): void
  +dispose(): void
}

class MovementStrategy {
  +applyMovement(target: IMoveable, deltaTime: float): void
}

class IMoveable {
  +setVelocity(velocityX: float, velocityY: float): void
  +isActive(): boolean
}

class InputManager {
  +isKeyPressed(key: int): boolean
  +isKeyJustPressed(key: int): boolean
  +getMousePosition(): Vector2
}

class OutputManager {
  +begin(): void
  +draw(entity: Entity): void
  +end(): void
  +dispose(): void
}

<<interface>> IManager
<<abstract>> Scene
<<abstract>> Entity
<<interface>> MovementStrategy
<<interface>> IMoveable

GameMaster "1" *-- "1" SceneManager
GameMaster "1" *-- "1" EntityManager

IManager <|.. SceneManager
IManager <|.. EntityManager
IManager <|.. CollisionManager
IManager <|.. MovementManager
IManager <|.. IOManager

SceneManager "1" *-- "*" Scene : owns
SceneManager "1" --> "1" Scene : current
GameMaster ..> SceneManager : delegates loop

EntityManager "1" *-- "*" Entity : manages

Scene "1" *-- "1" CollisionManager : owns
Scene "1" *-- "1" MovementManager : owns
Scene "1" *-- "1" IOManager : owns

%% ═══════════════════════════════════════════════════════════════════
%% CORRECTED ENTITY-COMPONENT RELATIONSHIPS
%% ═══════════════════════════════════════════════════════════════════

%% Composition: Entity HAS-A components (0..1 means zero or one)
Entity "1" *-- "0..1" StaticComponent : composed of
Entity "1" *-- "0..1" DynamicComponent : composed of
Entity "1" *-- "0..1" CollisionComponent : composed of

%% Bidirectional: Components know their owner entity
StaticComponent "0..1" --> "1" Entity : owner
DynamicComponent "0..1" --> "1" Entity : owner
CollisionComponent "0..1" --> "1" Entity : owner

%% Inheritance: GenericEntity IS-A Entity
Entity <|-- GenericEntity : extends

%% ═══════════════════════════════════════════════════════════════════

CollisionManager ..> CollisionComponent : queries

MovementManager "1" *-- "*" MovementStrategy : uses
MovementManager ..> IMoveable : updates
IMoveable <|.. Entity : implemented by

IOManager "1" *-- "1" InputManager
IOManager "1" *-- "1" OutputManager

Scene ..> EntityManager : uses
